--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <script src="https://kit.fontawesome.com/d4fba65e59.js" crossorigin="anonymous"></script>
     <title>Green Solution</title>
   </head>
   <body>
