--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,16 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+
+//formulaire d'ingrid
+    <script type = "text / javascript" src = "https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" > </script>
+    <script type = "text / javascript" >
+      (fonction() {
+        emailjs.init("user_XywVw40BZ3z065ajD5m8e");
+        })();
+    </script>
+// formulaire d'ingrid
+
   </body>
 </html>
